--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-speech/
+# Ignore everything in the example_folder
+speech/*
+
+# But do not ignore the folder itself, force include a .gitkeep
+!speech/.gitkeep
